# Modo-Plugins

./: .gitignore  LICENSE  README.md
modo/: CMakeLists.txt  CMakePresets.json
modo/cmake/: utils.cmake
modo/include/lxsdk/: ex_pReadWrap.hxx  ex_toolPacketWrap.hpp
modo/src/: CMakeLists.txt
modo/src/ModelingFalloff/: CMakeLists.txt  PartFalloff.cxx  PartFalloff.hxx  Properties.cfg
modo/src/ThicknessChecker/: CMakeLists.txt  thickness.cxx
modo/src/lxsdk/: CMakeLists.txt
